@startuml
class Usuario {
    +Nome: String
    +Idade: Int
    +CEP: String
    +Numero: String
    +Complemento: String
    +Telefone: String[]
    FazerLogin()
}

class Professor {
    +Matricula: String 
    CriarTurma()
    ExcluirTurma()
    EditarTurma()
    AvaliarProposta()
    ProporProposta()
}

class Aluno {
    +Matricula: String
    +DataDeEntrada: Data
    ProporProposta()
    EscolherProjeto()
}

class Gestor {
    +Matricula: String
    CriarProfessor()
    ExcluirProfessor()
    CriarProjeto()
    EditarProjeto()
}

class Projeto <<entity>> {
    +Titulo: String
    +Descrição: String
    +Status: String
    +Ano: Int
    +Área: String
    +Entrega: Data
    +Autor: String
    +Departamento: String
    VerificarProjeto()
}

class Perfil <<entity>> {
    Status: String
    Descrição: String
    Tipo: String
    Codigo: Int
    ConsultarProjeto()
}

class Turma {
    codigo: String
    Disciplina: String
    Departamento: String
}

Usuario <|-- Professor
Usuario <|-- Aluno
Usuario <|-- Gestor
@enduml
